Update getCharString() keycodes

--- a/index.html
+++ b/index.html
@@ -79,8 +79,53 @@ function getCharString(value){
 		case 88 : return "x" ; done
 		case 89 : return "y" ; done
 		case 90 : return "z" ; done
-		// case 91 : return "" ; done
-		// case 92 : return "" ; done
+		case 48 : return "0" ; done
+		case 49 : return "1" ; done
+		case 50 : return "2" ; done
+		case 51 : return "3" ; done
+		case 52 : return "4" ; done
+		case 53 : return "5" ; done
+		case 54 : return "6" ; done
+		case 55 : return "7" ; done
+		case 56 : return "8" ; done
+		case 57 : return "9" ; done
+		case 27 : return "Esc" ; done
+		case 9 : return "Tab" ; done
+		case 20 : return "Caps Lock" ; done
+		case 16 : return "Shift" ; done
+		// case 93 : return "Fn" ; done
+		case 17 : return "Ctrl" ; done
+		case 91 : return "Windows Key" ; done
+		case 18 : return "Alt" ; done
+		case 32 : return "Space" ; done
+		case 36 : return "Home" ; done
+		case 35 : return "End" ; done
+		case 33 : return "PgUp" ; done
+		case 34 : return "PgDn" ; done
+		case 13 : return "Enter" ; done
+		case 188 : return "," ; done
+		case 190 : return "." ; done
+		case 191 : return "/" ; done
+		case 219 : return "[" ; done
+		case 221 : return "]" ; done
+		case 220 : return "\\" ; done
+		case 189 : return "-" ; done
+		case 197 : return "=" ; done
+		case 8 : return "Backspace" ; done
+		case 46 : return "Delete" ; done
+		case 192 : return "` ~" ; done
+		case 112 : return "f1" ; done
+		case 113 : return "f2" ; done
+		case 114 : return "f3" ; done
+		case 115 : return "f4" ; done
+		case 116 : return "f5" ; done
+		case 117 : return "f6" ; done
+		case 118 : return "f7" ; done
+		case 119 : return "f8" ; done
+		case 120 : return "f9" ; done
+		case 121 : return "f10" ; done
+		case 122 : return "f11" ; done
+		case 123 : return "f12" ; done
 		// case 93 : return "" ; done
 		done;
 	}
