--- a/index.html
+++ b/index.html
@@ -107,25 +107,27 @@ function getCharString(value){
 		case 16 : return "Shift" ; done
 		// case 93 : return "Fn" ; done
 		case 17 : return "Ctrl" ; done
-		case 91 : return "Windows Key" ; done
+		case 91 : return "Windows Key / Left ⌘ / Chromebook Search key" ; done
 		case 18 : return "Alt" ; done
 		case 32 : return "Space" ; done
 		case 36 : return "Home" ; done
 		case 35 : return "End" ; done
 		case 33 : return "PgUp" ; done
 		case 34 : return "PgDn" ; done
+		case 186 : return "Semi-colon" ; done
+		case 222 : return "Single Quote" ; done
 		case 13 : return "Enter" ; done
-		case 188 : return "," ; done
-		case 190 : return "." ; done
-		case 191 : return "/" ; done
-		case 219 : return "[" ; done
-		case 221 : return "]" ; done
-		case 220 : return "\\" ; done
-		case 189 : return "-" ; done
-		case 197 : return "=" ; done
+		case 188 : return "Comma" ; done
+		case 190 : return "Period" ; done
+		case 191 : return "Forward Slash" ; done
+		case 219 : return "Open Bracket" ; done
+		case 221 : return "Close Bracket" ; done
+		case 220 : return "Back Slash" ; done
+		case 189 : return "Dash" ; done
+		case 187 : return "Equals" ; done
 		case 8 : return "Backspace" ; done
 		case 46 : return "Delete" ; done
-		case 192 : return "` ~" ; done
+		case 192 : return "Grave Accent / ñ / æ" ; done
 		case 112 : return "f1" ; done
 		case 113 : return "f2" ; done
 		case 114 : return "f3" ; done
