Move CSS and JS into own files

--- a/index.html
+++ b/index.html
@@ -7,12 +7,13 @@
 			  integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4="
 			  crossorigin="anonymous"></script>
 	<link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-	 <link href="https://fonts.googleapis.com/css?family=Abril+Fatface" rel="stylesheet"> 
-	 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
-
-	 <script  src="./keyboard/keypress.js"></script>
+	 <link rel="stylesheet" type="text/css" href="./css/keycodes.css">
+	<!--  <link href="https://fonts.googleapis.com/css?family=Abril+Fatface" rel="stylesheet">  -->
+	 <!-- <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+ -->
+<!-- 
 <style type="text/css">
-.bullseye {
+/*.bullseye {
     position: fixed;
     top: 50%;
     left: 50%;
@@ -26,17 +27,17 @@
 	padding: 20px;
     border-radius: 10px;
     box-shadow: 0px 5px 15px  #888888;
-    /*font-family: 'Abril Fatface', cursive;*/
+  
     font-size: 2em;
-    /*margin: auto;    */
+ 
 }
 .display-ascii {
 font-size: 25em;
 margin-bottom: -50px;	
-}
+}*/
 </style>
 
-
+ -->
 
 
 </head>
@@ -49,101 +50,102 @@ margin-bottom: -50px;
 </div>
 </body>
 
-<script type="text/javascript">
-var displayAscii = document.querySelector(".display-ascii");
-var keybox = document.querySelector(".keybox");
-// displayAscii.innerText = "TEST"
-$("body").bind("keydown",function(e){
-    var cvalue = String.fromCharCode(e.keyCode);
-    var nvalue = (e.keyCode);
-    displayAscii.innerText = nvalue;
-    keybox.innerText = getCharString(nvalue);
-    // var value = this.value + String.fromCharCode(e.keyCode);
-       // console.log(cvalue,nvalue);
-       console.log("getCharString",getCharString(nvalue))
-})
+ <script src="./js/keycodes.js"></script> 
+<!-- <script type="text/javascript">
+// var displayAscii = document.querySelector(".display-ascii");
+// var keybox = document.querySelector(".keybox");
+// // displayAscii.innerText = "TEST"
+// $("body").bind("keydown",function(e){
+//     var cvalue = String.fromCharCode(e.keyCode);
+//     var nvalue = (e.keyCode);
+//     displayAscii.innerText = nvalue;
+//     keybox.innerText = getCharString(nvalue);
+//     // var value = this.value + String.fromCharCode(e.keyCode);
+//        // console.log(cvalue,nvalue);
+//        console.log("getCharString",getCharString(nvalue))
+// })
 
-function getCharString(value){
-	switch(value){
-		case 65 : return "a" ; done
-		case 66 : return "b" ; done
-		case 67 : return "c" ; done
-		case 68 : return "d" ; done
-		case 69 : return "e" ; done
-		case 70 : return "f" ; done
-		case 71 : return "g" ; done
-		case 72 : return "h" ; done
-		case 73 : return "i" ; done
-		case 74 : return "j" ; done
-		case 75 : return "k" ; done
-		case 76 : return "l" ; done
-		case 77 : return "m" ; done
-		case 78 : return "n" ; done
-		case 79 : return "o" ; done
-		case 80 : return "p" ; done
-		case 81 : return "q" ; done
-		case 82 : return "r" ; done
-		case 83 : return "s" ; done
-		case 84 : return "t" ; done
-		case 85 : return "u" ; done
-		case 86 : return "v" ; done
-		case 87 : return "w" ; done
-		case 88 : return "x" ; done
-		case 89 : return "y" ; done
-		case 90 : return "z" ; done
-		case 48 : return "0" ; done
-		case 49 : return "1" ; done
-		case 50 : return "2" ; done
-		case 51 : return "3" ; done
-		case 52 : return "4" ; done
-		case 53 : return "5" ; done
-		case 54 : return "6" ; done
-		case 55 : return "7" ; done
-		case 56 : return "8" ; done
-		case 57 : return "9" ; done
-		case 27 : return "Esc" ; done
-		case 9 : return "Tab" ; done
-		case 20 : return "Caps Lock" ; done
-		case 16 : return "Shift" ; done
-		// case 93 : return "Fn" ; done
-		case 17 : return "Ctrl" ; done
-		case 91 : return "Windows Key / Left ⌘ / Chromebook Search key" ; done
-		case 18 : return "Alt" ; done
-		case 32 : return "Space" ; done
-		case 36 : return "Home" ; done
-		case 35 : return "End" ; done
-		case 33 : return "PgUp" ; done
-		case 34 : return "PgDn" ; done
-		case 186 : return "Semi-colon" ; done
-		case 222 : return "Single Quote" ; done
-		case 13 : return "Enter" ; done
-		case 188 : return "Comma" ; done
-		case 190 : return "Period" ; done
-		case 191 : return "Forward Slash" ; done
-		case 219 : return "Open Bracket" ; done
-		case 221 : return "Close Bracket" ; done
-		case 220 : return "Back Slash" ; done
-		case 189 : return "Dash" ; done
-		case 187 : return "Equals" ; done
-		case 8 : return "Backspace" ; done
-		case 46 : return "Delete" ; done
-		case 192 : return "Grave Accent / ñ / æ" ; done
-		case 112 : return "f1" ; done
-		case 113 : return "f2" ; done
-		case 114 : return "f3" ; done
-		case 115 : return "f4" ; done
-		case 116 : return "f5" ; done
-		case 117 : return "f6" ; done
-		case 118 : return "f7" ; done
-		case 119 : return "f8" ; done
-		case 120 : return "f9" ; done
-		case 121 : return "f10" ; done
-		case 122 : return "f11" ; done
-		case 123 : return "f12" ; done
-		default: return "undefined" ; done
-		done;
-	}
-}
+// function getCharString(value){
+// 	switch(value){
+// 		case 65 : return "a" ; done
+// 		case 66 : return "b" ; done
+// 		case 67 : return "c" ; done
+// 		case 68 : return "d" ; done
+// 		case 69 : return "e" ; done
+// 		case 70 : return "f" ; done
+// 		case 71 : return "g" ; done
+// 		case 72 : return "h" ; done
+// 		case 73 : return "i" ; done
+// 		case 74 : return "j" ; done
+// 		case 75 : return "k" ; done
+// 		case 76 : return "l" ; done
+// 		case 77 : return "m" ; done
+// 		case 78 : return "n" ; done
+// 		case 79 : return "o" ; done
+// 		case 80 : return "p" ; done
+// 		case 81 : return "q" ; done
+// 		case 82 : return "r" ; done
+// 		case 83 : return "s" ; done
+// 		case 84 : return "t" ; done
+// 		case 85 : return "u" ; done
+// 		case 86 : return "v" ; done
+// 		case 87 : return "w" ; done
+// 		case 88 : return "x" ; done
+// 		case 89 : return "y" ; done
+// 		case 90 : return "z" ; done
+// 		case 48 : return "0" ; done
+// 		case 49 : return "1" ; done
+// 		case 50 : return "2" ; done
+// 		case 51 : return "3" ; done
+// 		case 52 : return "4" ; done
+// 		case 53 : return "5" ; done
+// 		case 54 : return "6" ; done
+// 		case 55 : return "7" ; done
+// 		case 56 : return "8" ; done
+// 		case 57 : return "9" ; done
+// 		case 27 : return "Esc" ; done
+// 		case 9 : return "Tab" ; done
+// 		case 20 : return "Caps Lock" ; done
+// 		case 16 : return "Shift" ; done
+// 		// case 93 : return "Fn" ; done
+// 		case 17 : return "Ctrl" ; done
+// 		case 91 : return "Windows Key / Left ⌘ / Chromebook Search key" ; done
+// 		case 18 : return "Alt" ; done
+// 		case 32 : return "Space" ; done
+// 		case 36 : return "Home" ; done
+// 		case 35 : return "End" ; done
+// 		case 33 : return "PgUp" ; done
+// 		case 34 : return "PgDn" ; done
+// 		case 186 : return "Semi-colon" ; done
+// 		case 222 : return "Single Quote" ; done
+// 		case 13 : return "Enter" ; done
+// 		case 188 : return "Comma" ; done
+// 		case 190 : return "Period" ; done
+// 		case 191 : return "Forward Slash" ; done
+// 		case 219 : return "Open Bracket" ; done
+// 		case 221 : return "Close Bracket" ; done
+// 		case 220 : return "Back Slash" ; done
+// 		case 189 : return "Dash" ; done
+// 		case 187 : return "Equals" ; done
+// 		case 8 : return "Backspace" ; done
+// 		case 46 : return "Delete" ; done
+// 		case 192 : return "Grave Accent / ñ / æ" ; done
+// 		case 112 : return "f1" ; done
+// 		case 113 : return "f2" ; done
+// 		case 114 : return "f3" ; done
+// 		case 115 : return "f4" ; done
+// 		case 116 : return "f5" ; done
+// 		case 117 : return "f6" ; done
+// 		case 118 : return "f7" ; done
+// 		case 119 : return "f8" ; done
+// 		case 120 : return "f9" ; done
+// 		case 121 : return "f10" ; done
+// 		case 122 : return "f11" ; done
+// 		case 123 : return "f12" ; done
+// 		default: return "undefined" ; done
+// 		done;
+// 	}
+// }
 
 //  var listener = new window.keypress.Listener();
 //  listener.simple_combo("s", function() {
@@ -156,5 +158,5 @@ function getCharString(value){
 //     console.log("You pressed S");
 // });
 </script>
-
+ -->
 </html>
