Swap to more extensive list from wesbos

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 	<head>
+	<meta charset="UTF-8">
 		<title>Keycodes Viewer</title>
 		<script
 				  src="https://code.jquery.com/jquery-3.2.1.min.js"
